# referencing

./: .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  README.rst  noxfile.py  pyproject.toml  test-requirements.in  test-requirements.txt
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  zizmor.yml
docs/: api.rst  changes.rst  compatibility.rst  conf.py  external-retrieval.rst  index.rst  intro.rst  requirements.in  requirements.txt  schema-packages.rst  spelling-wordlist.txt  spelling_wordlist.txt
referencing/: __init__.py  _attrs.py  _attrs.pyi  _core.py  _hypothesis.py  exceptions.py  jsonschema.py  retrieval.py  typing.py
referencing/retrieval/: __init__.py  filesystem.py
referencing/retrieval/tests/: test_filesystem.py
referencing/tests/: test_core.py  test_exceptions.py  test_hypothesis.py  test_jsonschema.py  test_referencing_suite.py
tests/: test_integration.py
